added the addition function

--- a/learning_logs/Templates/learning_logs/Topic.html
+++ b/learning_logs/Templates/learning_logs/Topic.html
@@ -14,5 +14,7 @@
         <li>No Topics have been added yet</li>
         {% endfor %}
     </ul>
+<a href= "{% url 'learning_logs:New_Topic' %}" >Add a new Topic</a>
+    
     {% endblock content %}
     
