--- a/users/Templates/users/login.html
+++ b/users/Templates/users/login.html
@@ -13,19 +13,29 @@
         {% if form.errors %}
         <p>Your user login is not successfull</p>
         {% endif %}
+
         <div class="container-fluid justify-content-center ">
             <form method="post" action="{% url 'users:login'%}" class="form">
                 {% csrf_token %}
                 {% bootstrap_form form%}
                 <!-- {{form.as_p}} -->
                
+<div class="row text-center m-5">
 
-                    <div class="pt-5 text-center">
-                        {% buttons %}
-                        <button name = "submit"  class="btn btn-light text-dark btn-lg ">Log in</button>
+    <div class="coulmn ">
+        
+        {% buttons %}
+        <button name = "submit"  class="btn btn-light text-dark btn-lg ">Log in</button>
                         {% endbuttons %}
+                     </div>
+                     <div class="coulmn">
+
+            
+                        </div>   
+                        
                     </div>
-                
+                </div>
+                    
                 <input type="hidden" name = "next" value = "{% url 'learning_logs:index'%}" />
             </form>
         </div>
