--- a/learning_logs/Templates/learning_logs/newTopic.html
+++ b/learning_logs/Templates/learning_logs/newTopic.html
@@ -1,9 +1,33 @@
 {% extends "learning_logs\base.html" %}
 {% block content %}
-<p> Add a new Topic </p>
-<form action="{% url 'learning_logs:New_Topic' %}" method='post'>
+
+{% load bootstrap5 %}
+
+
+<div class="container-fluid bg-dark">
+    <div class="row text-center ">
+        <p class=" m-0 p-0">
+            
+                <h4 class="display-4 bg-dark text-white pb-5">
+                 Add Topic
+                </h4>
+           
+        </p>
+    </div>
+
+
+
+<form action="{% url 'learning_logs:New_Topic' %}" method='post' class="form">
     {% csrf_token %}
-    {{form.as_p}}
-    <button name="Submit">Add Topic</button>
+   {% bootstrap_form form %}
+
+   <div class="pt-5 text-center">
+    {% buttons %}
+<button name = "Submit" class="btn btn-light text-dark btn-lg">Add Topic</button>
+{% endbuttons %}
+</div>
 </form>
+
+
+</div>
 {% endblock content %}
