--- a/templates/learning_logs/base.html
+++ b/templates/learning_logs/base.html
@@ -38,7 +38,6 @@
             <li class="nav-item ">
                 <a class="nav-link">
                   <!-- <div class="p-3"> -->
-
                     {{user.username}}
                   <!-- </div> -->
                 </a>
@@ -62,5 +61,6 @@
         </div>
     </nav>
 {% block content %} {% endblock content %}
+<div style="height: 100vh;background-color: black;" class=""></div>
 </body>
 </html>
